--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
 <div class="features">
     <div class="container">
         <div class="feat">
-            <i class="fas fa-magic fa-3x "></i>
-            <h3>Tell US Your Idea</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing </p>
+            <i class="fas fa-paintbrush fa-3x "></i>
+            <h3>Desine</h3>
+            <p>Design attracts customers to your site</p>
         </div>
         <div class="feat">
-            <i class="far fa-gem fa-3x"></i>
-            <h3>Tell US Your Idea</h3>
-            <p>Lorem ipsum dolor, is sequi non cupiditate odio rem.</p>
+          <i class="fas fa-code fa-3x"></i>
+            <h3>Programming</h3>
+            <p>Programming is the language of the new world</p>
         </div>
         <div class="feat">
             <i class="fas fa-globe-asia fa-3x"></i>
-            <h3>Tell US Your Idea</h3>
-            <p>Lorem ipsum  commodi voluptate possimus voluptatum cumq.</p>
+            <h3>The world is yours</h3>
+            <p>80% of new digital products fail. Yours can be part of the 20%.</p>
         </div>
     </div>
 </div>
@@ -76,30 +76,30 @@
                 <i class="fa-solid fa-palette fa-2x"></i>
                 <div class="text">
                     <h3>Graphic Desine</h3>
-                    <p>Graphic Desine is Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>We Use PhotoShop to Make Desine</p>
                 </div>
             </div>
             <div class="srv">
-                <i class="fa-brands fa-sketch fa-2x"></i>
+              <i class="fa-solid fa-user-gear fa-2x"></i>
                 <div class="text">
                     <h3>UI & UX</h3>
-                    <p>UI & UX is Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>We Make User Exeperience and Use Adope Xd to Make Desine</p>
                 </div>
             </div>
           </div>  
           <div class="col">
             <div class="srv">
-                <i class="fa-solid fa-vector-square fa-2x"></i>
+              <i class="fa-regular fa-window-restore fa-2x"></i>
                 <div class="text">
                     <h3>Frontend</h3>
-                    <p>Graphic Desine is Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>We Use Html&Css&Bootstrab&SAss and JavaScript</p>
                 </div>
             </div>
             <div class="srv">
-                <i class="fa-solid fa-pen-ruler fa-2x"></i>
+              <i class="fa-solid fa-database fa-2x"></i>
                 <div class="text">
                     <h3>Backend</h3>
-                    <p>UI & UX is Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>PHP=>OOP=>Database&Laravel</p>
                 </div>
             </div>
           </div> 
@@ -147,21 +147,39 @@
  <div class="about" id="about">
     <div class="container">
       <h2 class="special-heading">About</h2>
-      <p>Less is more work</p>
+      <p>Dont be busy be Productive</p>
       <div class="about-content">
         <div class="image">
           <img  decoding="async" src="img/about.jpg" alt="" />
         </div>
         <div class="text">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora velit cum non,
-            fuga vitae architecto delectus sed maxime rerum impedit aliquam obcaecati, aut excepturi iusto laudantium!
+            Full Stack Developer Requirements:
+            Degree in computer science.
+            Strong organizational and project management skills.
+            Proficiency with fundamental front-end languages such as HTML, CSS, and JavaScript.
+            Familiarity with JavaScript frameworks such as Angular JS, React, and Amber.
+            Proficiency with server-side languages such as Python, Ruby, Java, PHP, and .Net.
+            Familiarity with database technology such as MySQL, Oracle, and MongoDB.
+            Excellent verbal communication skills.
+            Good problem-solving skills.
+            Attention to detail.
           </p>
           <hr />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sapiente. Velit iure exercitationem
-            dolores nesciunt dolore. Eum officiis dolorum hic voluptate quaerat minima, similique inventore esse,
-            alias, sed quo officia?
+            Full Stack Developer Responsibilities:
+Developing front end website architecture.
+Designing user interactions on web pages.
+Developing back-end website applications.
+Creating servers and databases for functionality.
+Ensuring cross-platform optimization for mobile phones.
+Ensuring responsiveness of applications.
+Working alongside graphic designers for web design features.
+Seeing through a project from conception to finished product.
+Designing and developing APIs.
+Meeting both technical and consumer needs.
+Staying abreast of developments in web applications and programming languages.
+
           </p>
         </div>
       </div>
@@ -174,8 +192,8 @@
           <h2 class="special-heading">Contact</h2>
           <p>We are born to create</p>
           <div class="info">
-            <p class="label">Feel free to drop us a line at:</p>
-            <a href="mailto:leonagency@mail.com?subject=Contact" class="link">leonagency@mail.com</a>
+            <p class="label">Developer:</p>
+            <a href="mostafaradwan0155933@gmail.com" class="link">mostafaradwan0155933@gmail.com</a>
             <div class="social">
               Find Us On Social Networks
               <i class="fab fa-youtube"></i>
@@ -187,7 +205,7 @@
       </div>
       <!-- End Contact -->
       <!-- Start Footer -->
-      <div class="footer">&copy; 2021 <span>Leon</span> All Right Reserved</div>
+      <div class="footer">&copy; 2023 <span>radwan</span> All Right Reserved</div>
       <!-- End Footer --
 </body>
 </html>
