--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <p>Programming is the language of the new world</p>
         </div>
         <div class="feat">
-            <i class="fas fa-globe-asia fa-3x"></i>
-            <h3>The world is yours</h3>
+            <i class="fas fa-cart-shopping fa-3x"></i>
+            <h3>Digital Markiting</h3>
             <p>80% of new digital products fail. Yours can be part of the 20%.</p>
         </div>
     </div>
