--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Staying abreast of developments in web applications and programming languages.
           <p>We are born to create</p>
           <div class="info">
             <p class="label">Developer:</p>
-            <a href="mostafaradwan0155933@gmail.com" class="link">mostafaradwan0155933@gmail.com</a>
+            <a href="mostafaradwan0155933@gmail.com" class="link">mostafaradwan@gmail.com</a>
             <div class="social">
               Find Us On Social Networks
               <i class="fab fa-youtube"></i>
